--- a/src/app/assets/scss/globals.scss
+++ b/src/app/assets/scss/globals.scss
@@ -137,6 +137,19 @@
 
   body {
     @apply bg-[#EEF1F9] dark:bg-background text-foreground text-sm;
+    position: relative;
+    &::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background: url('/background.png') no-repeat center center fixed;
+      background-size: cover;
+      filter: blur(0.3px);
+    }
   }
 
   .avatarGroup {
