--- a/src/app/assets/scss/partials/_map.scss
+++ b/src/app/assets/scss/partials/_map.scss
@@ -1,11 +1,11 @@
-.dashtail-codeVmapPrimary path {
+.bluemoon-codeVmapPrimary path {
   @apply fill-primary;
 
   .svg-map__location[aria-checked="true"] {
     @apply fill-primary;
   }
 }
-.dashtail-codeVmapWhite path {
+.bluemoon-codeVmapWhite path {
   @apply fill-default-200 dark:fill-slate-500;
 
   .svg-map__location[aria-checked="true"] {
@@ -13,7 +13,7 @@
   }
 }
 
-.dashtail-codeVmapInfo path {
+.bluemoon-codeVmapInfo path {
   @apply fill-info;
 
   .svg-map__location[aria-checked="true"] {
@@ -21,7 +21,7 @@
   }
 }
 
-.dashtail-codeVmapWarning path {
+.bluemoon-codeVmapWarning path {
   @apply fill-warning;
 
   .svg-map__location[aria-checked="true"] {
@@ -29,7 +29,7 @@
   }
 }
 
-.dashtail-codeVmapSuccess path {
+.bluemoon-codeVmapSuccess path {
   @apply fill-success;
 
   .svg-map__location[aria-checked="true"] {
@@ -37,7 +37,7 @@
   }
 }
 
-.dashtail-codevmap path {
+.bluemoon-codevmap path {
   @apply fill-primary;
 
   .svg-map__location[aria-checked="true"] {
